# cph-robust-transfers

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent.md  codex.md  experiments.md  problem.md  pyproject.toml  requirements.txt
.github/workflows/: week3-docs-update.yml
configs/: accessibility.defaults.toml  accessibility.live.toml  atlas.origins.expanded.csv  atlas.origins.sample.csv  atlas.pois.sample.csv  atlas.scenarios.live.csv  atlas.scenarios.sample.csv  od_candidates_sample.csv  pipeline.defaults.toml  router.defaults.toml  stations_seed.csv
docs/: accessibility_atlas_v1.md  accessibility_product_plan.md  architecture.md  benchmark_dashboard.html  copenhagen_accessibility_feasibility.md  decisions.md  literature.md  next_phase_plan.md  phase_a_gap_checklist.md  research_dashboard.html  results_week1_3.md  runbook.md  task_b_github_setup.md  week1_summary.md  week3_conclusions.md  week3_ops_status.md  week3_summary.md  workflow.md
model/: formulation.md  solver.md
notebooks/: 01_static_network_baseline.ipynb  02_robustness_experiments.ipynb  03_realtime_delay_profile.ipynb  README.md
src/: __init__.py  cli.py
tests/: test_accessibility_scaffold.py  test_benchmark_cli.py  test_benchmark_dashboard.py  test_delay_quantiles.py  test_graph_build.py  test_gtfs_parse.py  test_phase_a_task_a.py  test_phase_c_optimization.py  test_phase_d_rendering.py  test_realtime_collector.py  test_realtime_parser.py  test_results_dashboard.py  test_robustness.py  test_root_cli.py  test_template_bridges.py  test_template_cli.py  test_time_utils.py
(+307 files in other folders)
