[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cph-mobility-resilience"
version = "0.1.0"
description = "Mobility resilience and accessibility atlas for Greater Copenhagen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["src", "src.accessibility", "src.app", "src.common"]

[tool.pytest.ini_options]
pythonpath = ["."]
